# RRKinectInterface

./: README.md
kinect-v2-cpp-service/: CMakeLists.txt  FindKinectSDK2.cmake  cmake_install.cmake  kinect2_impl.cpp  kinect2_impl.h  main.cpp
robdef/: kinect2_interface.robdef
